<?xml version="1.0"?>
<package>
  <name>micros_swarm_framework</name>
  <version>0.0.17</version>
  <description>
    This is a programming framework to facilitate application development involving robot swarms. It makes coding for swarms much easier by providing an adequate swarm-level abstraction, as well as tools for swarm management, various communication mechanisms and so on. It also provides essential data structures, such as Neighbor, Swarm, and Virtual Stigmergy, to the user. Most importantly, it is completely compatible with ROS Indigo and presented in the form of a C++ library, which means that all resources in the ROS ecosystem are still available to the user. It is currently  extensible to Opensplice DDS.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="changxuefengcn@163.com">Xuefeng Chang</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://wiki.ros.org/micros_swarm_framework</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="changxuefengcn@163.com">Xuefeng Chang</author>
  <author email="caizhongxuan@vip.qq.com">Zhongxuan Cai</author>
  <author email="yanzhenwang@hotmail.com">Yanzhen Wang</author>
  <author email="yixiaodong@nudt.edu.cn">Xiaodong Yi</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gsdf_msgs</run_depend>
  <run_depend>micros_swarm</run_depend>
  <run_depend>app_loader</run_depend>
  <run_depend>ros_broker</run_depend>
  <run_depend>opensplice_dds_broker</run_depend>

  <run_depend>app1</run_depend>
  <run_depend>app2</run_depend>
  <run_depend>app3</run_depend>

  <run_depend>olfati_saber_flocking</run_depend>
  <run_depend>pso</run_depend>
  
  <run_depend>testbb</run_depend>
  <run_depend>testnc</run_depend>
  <run_depend>testrth</run_depend>
  <run_depend>testvstig</run_depend>
  <run_depend>testscdspso</run_depend>

  <run_depend>micros_swarm_stage</run_depend>
  <run_depend>micros_swarm_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
