#This is a swarm library based on the micros_swarm_framework
#add_subdirectory(olfati_saber_flocking)
MYSUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
message("-- find libs in swarm_lib of micros_swarm_framework:")
message("+++++++++++++++++++++++++++++++++++++++++++++")
FOREACH(subdir ${SUBDIRS})
    ADD_SUBDIRECTORY(${subdir})
    message("add lib: " ${subdir})
ENDFOREACH()
message("+++++++++++++++++++++++++++++++++++++++++++++")